tests/ui/parser/attribute/attr-dangling-in-fn.stderr
error: expected statement after outer attribute
  --> $DIR/attr-dangling-in-fn.rs:2:3
   |
LL |   #[foo = "bar"]
   |   ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

